--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"content="ie=edge">
     <title>Document</title>
+    <style> 
+      body{text-align:center} 
+    </style> 
     </head>
     <body>
     <h1>吳雨茿 HomePage</h1>
