--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     </head>
     <body>
     <h1>吳雨茿 HomePage</h1>
+    <main>
+      <img src="https://i.imgur.com/ZqqvksR.jpg" alt="">
+      <p>Hi~我是吳雨茿</p>
+      <p>目前就讀於輔仁大學資訊工程學系二年級</p>
+    </main>>
     </body>
     </html>
