--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="">
       <p>Hi~我是吳雨茿</p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-    </main>>
+      <p>興趣是看電影、畫畫、下西洋棋</p>
+      
+      <p>聯絡方式:410261256@mail.fju.edu.tw</p>
+    </main>
     </body>
     </html>
