--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>Personal Page</title>
     <style> 
       body{text-align:center} 
+      .smaller-image {
+        width: 100px;
+      }
     </style> 
     </head>
     <body>
-    <h1>吳雨茿 HomePage</h1>
+    <h1>吳雨茿's HomePage</h1>
     <main>
-      <img src="https://i.imgur.com/ZqqvksR.jpg" alt="">
+      <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p>Hi~我是吳雨茿</p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
       <p>興趣是看電影、畫畫、下西洋棋</p>
-      
       <p>聯絡方式:410261256@mail.fju.edu.tw</p>
     </main>
     </body>
