--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style> 
     </head>
     <body>
-    <h1>吳雨茿's HomePage</h1>
+    <h1 style="color: rgb(104, 10, 187);">吳雨茿's HomePage</h1>
     <main>
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p>Hi~我是吳雨茿</p>
