--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       }
     </style> 
     </head>
-    <body>
-    <h1 style="color: rgb(104, 10, 187);">吳雨茿's HomePage</h1>
+    <body style="background-color:#9e9eed">
+    <h1 style="color: rgb(63, 6, 121);">吳雨茿's HomePage</h1>
     <main>
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p>Hi~我是吳雨茿</p>
