--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
     </style> 
     </head>
-    <body style="background-color:#A5A1D6">
+    <body style="background-color:#F4F4FC">
     <h1 style="color: rgb(63, 6, 121);">吳雨茿's HomePage</h1>
     <main>
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
