--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       .smaller-image {
         width: 400px;
       }
+      h2 {
+        font-family: Lobster;
+      }
     </style> 
     </head>
     <body style="background-color:#F4F4FC">
