--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       h2 {
         font-family: Lobster;
       }
+      p {
+        font-family: Helvetica, sans-serif;
+      }
     </style> 
     </head>
     <body style="background-color:#F4F4FC">
