--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
       .smaller-image {
         width: 400px;
       }
-      h2 {
-        font-family: Lobster;
-      }
-      p {
-        font-family: Helvetica, sans-serif;
-      }
     </style> 
     </head>
     <body style="background-color:#F4F4FC">
     <h1 style="color: rgb(63, 6, 121);">吳雨茿's HomePage</h1>
     <main>
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
-      <p>Hi~我是吳雨茿</p>
+      <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣是看電影、畫畫、下西洋棋</p>
-      <p>聯絡方式:410261256@mail.fju.edu.tw</p>
+      <p>興趣：
+        <ul>
+          <li>看電影</li>
+          <li>畫畫</li>
+          <li>下西洋棋</li>
+        </ul>
+      </p>
+      <p>聯絡方式:410261256@mail.fju.edu.tw<</p>
     </main>
     </body>
     </html>
