--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：
-        <ul>
-          <li>看電影</li>
-          <li>畫畫</li>
-          <li>下西洋棋</li>
-        </ul>
-      </p>
-      <p>聯絡方式:410261256@mail.fju.edu.tw<</p>
+      <p>興趣：看電影、畫畫、下西洋棋</p>
+      <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
+      <p>聯絡方式:410261256@mail.fju.edu.tw</p>
     </main>
     </body>
     </html>
