--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
       <p>興趣：看電影、畫畫、下西洋棋</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
-      <p><b>聯絡方式:410261256@mail.fju.edu.tw</b>></p>
+      <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
     </main>
     </body>
     </html>
