--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<script src =" https://code.jquery.com/jquery-3.6.1.js " > </script>
+<script src =" https://code.jquery.com/jquery-3.6.1.js " > 
+  document.addEventListener('DOMContentLoaded', function(){
+    document.getElementById('getMessage').onclick = function(){
+    document.getElementsByClassName('message')[0].textContent="Here is the message";
+    }
+  });
+</script>
     <html  lang ="en">
     <head> 
     <meta charset="UTF-8">
@@ -22,6 +28,13 @@
       <p>興趣：看電影、畫畫、下西洋棋</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
+      <p class="message box">
+        The message will go here</p>
+      <p>
+        <button id="getMessage">
+          Get Message
+        </button>
+      </p>
     </main>
     </body>
     </html>
