--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<script src =" https://code.jquery.com/jquery-3.6.1.js " > 
+<script> 
   document.addEventListener('DOMContentLoaded', function(){
     document.getElementById('getMessage').onclick = function(){
     document.getElementsByClassName('message')[0].textContent="Here is the message";
@@ -38,3 +38,4 @@
     </main>
     </body>
     </html>
+    
