--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     document.getElementById('getMessage').onclick = function(){
     document.getElementsByClassName('message')[0].textContent="Here is the message";
     }
+    $(document).ready(function() {
+      $("button").addClass("animated bounce");
+        });
   });
 </script>
     <html  lang ="en">
