--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="message box">
         The message will go here</p>
       <p>
-        <button id="getMessage">
+        <button class="btn btn-default target" id="getMessage">
           Get Message
         </button>
       </p>
