--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   });
   $(document).ready(function() {
     $("button").addClass("animated bounce");
+    $("button").css("color", "blue");
       });
 </script>
     <html  lang ="en">
@@ -28,7 +29,7 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋3</p>
+      <p>興趣：看電影、畫畫、下西洋棋4</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
