--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
       .smaller-image {
         width: 400px;
       }
+      .box {
+        border-radius: 5px;
+        background-color: #eee;
+        padding: 20px 5px;
+      }
+      button {
+        color: white;
+        background-color: #4791d0;
+        border-radius: 5px;
+        border: 1px solid #4791d0;
+        padding: 5px 10px 8px 10px;
+      }
+      button:hover {
+        background-color: #0F5897;
+        border: 1px solid #0F5897;
+      }
+      .text{
+        display: "HI~~";
+    }
     </style> 
     </head>
     <body style="background-color:#F4F4FC">
@@ -19,28 +38,32 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋5</p>
+      <p>興趣：看電影、畫畫、下西洋棋6</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
         The message will go here</p>
       <p>
-        <button class="btn btn-default target" id="getMessage">
-          Get Message
+        <button type="button" class="button" id="getMessage">
+          歡迎在此留言!!
         </button>
       </p>
-      <script > 
+      <div class="text">
+        <textarea name="area" cols="30" rows="10"></textarea>
+        <input type="submit" value="send it">
+      </div>
+      <script>
         document.addEventListener('DOMContentLoaded', function(){
           document.getElementById('getMessage').onclick = function(){
-          document.getElementsByClassName('message')[0].textContent="Here is the message";
           }
         });
-        $(document).ready(function() {
-          $("button").addClass("animated bounce");
-          $("button").css("color", "blue");
-            });
+        $(document).ready(function () {
+          $('.button').click(function () { 
+              $('.text').fadeToggle(3000);
+              
+          });
+      });
       </script>
     </main>
     </body>
     </html>
-    
