--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         border: 1px solid #0F5897;
       }
       .text{
-        display: "HI~~";
-    }
+        opacity:0;
+        transition:all 3s;
+     }
+     .text.active{
+        opacity:1;
+     } 
     </style> 
     </head>
     <body style="background-color:#F4F4FC">
@@ -38,7 +42,7 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋6</p>
+      <p>興趣：看電影、畫畫、下西洋棋8</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
@@ -48,7 +52,7 @@
           按此即可留言!!
         </button>
       </p>
-      <div class="text">
+      <div class="text active">
         <textarea name="area" cols="30" rows="10"></textarea>
         <input type="submit" value="send it">
       </div>
@@ -60,7 +64,7 @@
         });
         $(document).ready(function () {
           $('.button').click(function () { 
-              $('.text').fadeToggle(3000);
+            $('.text').toggleClass('active');
               
           });
       });
