--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
       .box {
         border-radius: 5px;
-        background-color: rgb(123, 150, 238);
+        background-color: rgb(137, 161, 240);
         padding: 20px 5px;
       }
       button {
@@ -24,7 +24,7 @@
         padding: 5px 10px 8px 10px;
       }
       button:hover {
-        background-color: #0F5897;
+        background-color: #5583da;
         border: 1px solid #0F5897;
       }
       .text{
