--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋8</p>
+      <p>興趣：看電影、畫畫、下西洋棋9</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
@@ -52,6 +52,7 @@
           按此即可留言!!
         </button>
       </p>
+      <p class="text">你好</p>
       <div class="text active">
         <textarea name="area" cols="30" rows="10"></textarea>
         <input type="submit" value="send it">
