--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
       <div class="text active">
         <textarea name="area" cols="30" rows="10"></textarea>
         <input type="submit" value="send it">
+        <input type="range" min="-10" max="10">
       </div>
-      <script language="javascript">
-        var send it;
-        if(send it==true)alert("你好");
+      <script language="javascript"> 
+        var range;
+        ranfe=confirm("您喜歡我的網頁嗎?");
+        if(range>=8)alert("非常感謝您的好評!!");
+        else alert("我還會再進步的!");
         </script>
       <script>
         document.addEventListener('DOMContentLoaded', function(){
