--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋1</p>
+      <p>興趣：看電影、畫畫、下西洋棋0</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
@@ -52,7 +52,7 @@
           按此即可留言!!
         </button>
       </p>
-      <div class="text active">
+      <div class="text">
         <textarea name="area" cols="30" rows="10"></textarea>
         <button type="button" class="button2" id="sendIt">
           送出
@@ -69,7 +69,7 @@
         });
         $(document).ready(function () {
           $('.button').click(function () { 
-            $('.text').fadeIn('active');
+            $('.text').fadeIn(5000);
               
           });
       });
