--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
         border: 1px solid #0F5897;
       }
       .text{
-        opacity:0;
-        transition:all 3s;
-     }
-     .text.active{
-        opacity:1;
-     } 
+        display: none;
+    }
+
     </style> 
     </head>
     <body style="background-color:#F4F4FC">
@@ -42,7 +39,7 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋0</p>
+      <p>興趣：看電影、畫畫、下西洋棋2</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
