--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
       .box {
         border-radius: 5px;
-        background-color: rgb(137, 161, 240);
+        background-color: rgb(150, 171, 240);
         padding: 20px 5px;
       }
       button {
@@ -39,7 +39,7 @@
       <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       <p><strong>Hi~我是吳雨茿</strong></p>
       <p>目前就讀於輔仁大學資訊工程學系二年級</p>
-      <p>興趣：看電影、畫畫、下西洋棋2</p>
+      <p>興趣：看電影、畫畫、下西洋棋</p>
       <p><a href="https://github.com/Yu-Jhu-Wu">Click here for my GitHub profile</a></p>
       <p><b>聯絡方式:410261256@mail.fju.edu.tw</b></p>
       <p class="message box">
