--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           }
         });
         $(document).ready(function () {
+          $("button").addClass("animated bounce");
           $('.button').click(function () { 
             $('.text').fadeIn(5000);
               
