--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <button type="button" class="button2" id="sendIt">
           送出
         </button>
+        <img src="https://i.imgur.com/ZqqvksR.jpg" alt="" class="smaller-image">
       </div>
       <script>
         document.addEventListener('DOMContentLoaded', function(){
